    + [AB] Recognize user@host:path.git URIs in Vcs-Git (Closes: #778323)
  * checks/files.{desc,pm}:
    + [BR] Rename compressed-objects.inv to
      file-should-not-be-compressed and use it for doxygen
      map.gz.  (Closes: #751949).
    + [NT] Merge patch from Nicolas Boulenguez to remove some
      partially redundant code.  (Closes: #784277)
  * checks/init.d.desc:
    + [BR] Add reference to #DEBHELPER# token for
      script-in-etc-init.d-not-registered-via-update-rc.d.
      (Closes: #775467).
  * checks/patch-systems.pm:
    + [NT] Avoid crashing on debian/patches being a file.
      (Closes: #778556)
  * checks/po-debconf.pm:
    + [NT] Avoid errors from intltool-update.
      (Closes: #778558)
  * checks/script.{desc,pm}:
    + [BR] Fix some false negatives for
      command-with-path-in-maintainer-script tag.
      (Closes: #769845).
  * checks/shared-libs.{desc,pm}:
    + [NT] Apply patch from Guillem Jover to recognise the
      "Ignore-Blacklist-Groups" meta field in symbols files.
      (Closes: #781396)
  * checks/source-copyright.{desc,pm}:
    + [BR] Fix a false positive for
      missing-license-paragraph-in-dep5-copyright tag.
      Emit a new spefic tag for references to the header paragraph
      as a license paragraph.  (Closes: #766118).
    + [BR] Detect if license short name are unique.
    + [BR] Avoid false positive license-problem-undefined-license
      for - in short license.
    + [BR] Warn when using reference to header license.
      (related to bug #769818).
  * checks/symlinks.desc:
    + [AB] package-contains-broken-symlink: Mention in the tag description
      that only direct dependencies built from the same source package can
      be checked by lintian. (Closes: #776535)
  * checks/watch-file.{desc,pm}:
    + [NT] Check for watch files accessing PyPI over HTTP
      instead of HTTPS.  This check has been imported from
      lintian4python (with a different tag name).